--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,15 @@
         <activity android:name=".LoadingActivity" />
         <activity android:name=".LearningActivity" />
         <activity android:name=".ResultActivity"></activity>
+        <provider
+            android:name=".GenericFileProvider"
+            android:authorities="${applicationId}.com.example.masterpiece.masterpiece"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 
 </manifest>
